force-app/main/default/objects/LogIntegracao__c/LogIntegracao__c.object-meta.xml
<CustomObject>
    <label>LogIntegracao</label>
    <nameField>
        <label>Nome de LogIntegracao</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LogIntegracao</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>