force-app/main/default/objects/LogIntegracao__c/fields/Erro__c.field-meta.xml
<CustomField>
    <fullName>Erro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Erro</label>
    <type>Checkbox</type>
</CustomField>