force-app/main/default/objects/LogIntegracao__c/fields/PayloadIn__c.field-meta.xml
<CustomField>
    <fullName>PayloadIn__c</fullName>
    <label>PayloadIn</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>