force-app/main/default/objects/LogIntegracao__c/fields/PayloadOut__c.field-meta.xml
<CustomField>
    <fullName>PayloadOut__c</fullName>
    <label>PayloadOut</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>